# geo_marketing

./: .gitignore  .mcp.json  .workspace.json  GEO_CLIENT2_FRONTEND_INVENTORY.md  MONOREPO.md  Makefile  README.md  REFACTORING_SUMMARY.md  RPA发布assistant.yml  UI_UX_SUGGESTIONS.md  UPGRADE_GUIDE.md  baijiahao-cover-modal-snapshot.txt  core.md  opencode.json  package.json  pnpm-workspace.yaml  pyproject.toml  todo.md  百保力GEO报告-0227.docx
.sisyphus/: ralph-loop.local.md
docs/: GEO实施工程化方案.md  README.md  rpa-publishing-skill.md  数据库扩展方案.md
geo_agent/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  ENV_INFO.md  IMPLEMENTATION_REPORT.md  LOGGING_DONE.md  LOGGING_ENHANCEMENTS.md  LOGGING_UPDATE_SUMMARY.md  MIGRATION_TO_UV.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_LOGGING_GUIDE.md  README.md  START_HERE.md  UV_GUIDE.md  UV_UPDATE_SUMMARY.md  VENV_CONFIRMED.md  config.yaml  main.py  pyproject.toml  requirements.txt  test_agent.py  test_logging.py
geo_agent/app/: __init__.py
geo_agent/app/api/: health.py
geo_agent/app/api/v1/: chat.py  completions.py  models.py
geo_agent/app/core/: config.py  logger.py  middleware.py
geo_agent/app/models/: dashscope.py  openai.py
geo_agent/app/services/: converter.py  qwen_client.py
geo_agent/app/utils/: helpers.py
geo_client/: MIGRATION_SUMMARY.md  Makefile  QUICK_START.md  README.md  electron-builder.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test-electron.js  vite.config.ts
geo_client/src-tauri/: Cargo.toml  tauri.conf.json
geo_client/src-tauri/.cargo/: config.toml
geo_client/src-tauri/capabilities/: default.json
geo_client/src-tauri/icons/: README.md  icon.png.disabled
geo_client/src-tauri/scripts/: create-placeholder-icons.sh  fix-icon.sh
geo_client/src-tauri/src/: main.rs
geo_client/src-tauri/src/commands/: auth.rs  logs.rs  mod.rs  provider.rs  storage.rs  task.rs
geo_client/src-tauri/src/models/: mod.rs
geo_client/src-tauri/src/providers/: mod.rs
geo_client/src-tauri/src/queue/: mod.rs  task_queue.rs
geo_client/src-tauri/src/storage/: browser.rs  database.rs  mod.rs
geo_client/src-tauri/src/utils/: mod.rs
geo_client2/: .gitignore  IMPLEMENTATION_STATUS.md  LOGGING.md  Makefile  README.md  debug_db.go.bak  fix_deepseek_all.py  fix_runtime_enable.py  geo_client_logs_today_20260124_220130.txt  go.mod  go.sum  main.go  marketing_flowchart.html  update_deepseek.py  update_deepseek_buffer.py  update_deepseek_raw.py  wails.json
geo_db/: Makefile  README.md  docker-compose.yml  fix_permissions.sql  init.sql  init_v2.sql  init_v3.1.sql  init_v3.sql  pyproject.toml  upgrade_db.sh
geo_server/: .env.example  (+7 more)
llm_sentry_monitor/: Makefile  README.md  README_AUTH.md  api.py  config.yaml  main.py  pyproject.toml  requirements.txt  stats.py  stats_full.py
llm_sentry_monitor/core/: db.py  logger_config.py  parser.py  task_executor.py
llm_sentry_monitor/providers/: base.py  bocha_api.py  deepseek_web.py  doubao_web.py
llm_sentry_monitor/scripts/: fix_encoding.py
llm_sentry_monitor/static/: index.html
llm_sentry_monitor/static/css/: style.css
llm_sentry_monitor/static/js/: api.js  drawer.js  main.js  task.js  ui.js
(+233 files in other folders)
