[package]
name = "geo-client"
version = "0.1.0"
description = "Geo Marketing Client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
# By default, Tauri runs in production mode.
# When `tauri dev` is used, the default feature flag is `dev`
# If you want to use a custom feature flag, you can run:
# `tauri dev --features <feature flag>`
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
